@@ -46,7 +46,7 @@ class queue_list extends \cenozo\ui\widget\base_list
     $this->add_column( 'participant_count', 'number', 'Participants', false );
     $this->add_column( 'description', 'text', 'Description', true, true, 'left' );
     $session = lib::create( 'business\session' );
-    if( 3 != $session->get_role()->tier )
+    if( !$session->get_role()->all_sites )
       $this->set_heading(
         sprintf( '%s %s for %s',
                  $this->get_subject(),
@@ -65,11 +65,10 @@ class queue_list extends \cenozo\ui\widget\base_list
     parent::setup();
     
     $session = lib::create( 'business\session' );
-    $is_top_tier = 3 == $session->get_role()->tier;
-    $is_mid_tier = 2 == $session->get_role()->tier;
+    $all_sites = $session->get_role()->all_sites;
     
-    // if this is a top tier role, give them a list of sites to choose from
-    if( $is_top_tier )
+    // if this is an all-site role, give them a list of sites to choose from
+    if( $all_sites )
     {
       $sites = array();
       $site_class_name = lib::get_class_name( 'database\site' );
@@ -111,8 +110,8 @@ class queue_list extends \cenozo\ui\widget\base_list
     $setting_manager = lib::create( 'business\setting_manager' );
     foreach( $this->get_record_list() as $record )
     {
-      // restrict to the current site if the current user is a mid tier role
-      if( $is_mid_tier ) $record->set_site( $session->get_site() );
+      // restrict to the current site if the current user is an all-site role
+      if( !$all_sites ) $record->set_site( $session->get_site() );
       else if( !is_null( $db_restrict_site ) ) $record->set_site( $db_restrict_site );
       
       // restrict to the current qnaire
