@@ -40,7 +40,7 @@ class queue_restriction_view extends \cenozo\ui\widget\base_view
 
     // define all columns defining this record
 
-    $type = 3 == lib::create( 'business\session' )->get_role()->tier ? 'enum' : 'hidden';
+    $type = lib::create( 'business\session' )->get_role()->all_sites ? 'enum' : 'hidden';
     $this->add_item( 'site_id', $type, 'Site' );
     $this->add_item( 'city', 'string', 'City' );
     $this->add_item( 'region_id', 'enum', 'Region' );
@@ -61,10 +61,10 @@ class queue_restriction_view extends \cenozo\ui\widget\base_view
     $region_class_name = lib::get_class_name( 'database\region' );
 
     $session = lib::create( 'business\session' );
-    $is_top_tier = 3 == $session->get_role()->tier;
+    $all_sites = $session->get_role()->all_sites;
 
     // create enum arrays
-    if( $is_top_tier )
+    if( $all_sites )
     {
       $sites = array();
       $site_mod = lib::create( 'database\modifier' );
@@ -82,7 +82,7 @@ class queue_restriction_view extends \cenozo\ui\widget\base_view
 
     // set the view's items
     $this->set_item(
-      'site_id', $this->get_record()->site_id, false, $is_top_tier ? $sites : NULL );
+      'site_id', $this->get_record()->site_id, false, $all_sites ? $sites : NULL );
     $this->set_item( 'city', $this->get_record()->city, false );
     $this->set_item( 'region_id', $this->get_record()->region_id, false, $regions );
     $this->set_item( 'postcode', $this->get_record()->postcode, false );
