@@ -4,5 +4,6 @@ SET AUTOCOMMIT=0;
 
 SOURCE service_has_role.sql
 SOURCE role_has_operation.sql
+SOURCE role.sql
 
 COMMIT;
